src/pages/LandingPageV3/style.css
/* ... */
.debug {
  border: 1px red solid;
}

.debug-blue {
  border: 1px cyan solid;
}
.ll-container {
  width: max(55%, 650px);
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  bottom: 0;
  z-index: -20;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer-container-new {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  /* Align items to the start (left) */
  align-items: center;
  background-color: #187dff;
  padding: 3vh;
  padding-left: 6vw;
  padding-right: 6vw;
  color: white;
}

.links-containerr {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  margin-left: 3vw;
  /* Stack links vertically */
}

.link-new {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 20px;
  margin-bottom: 0.3vh;
  width: 30vw;
  align-content: space-evenly;
  flex-wrap: wrap;
  /* Wrap icons if they overflow */
  flex-basis: auto;
  /* Allow container to shrink */
}

.icon-container-new {
  display: flex;
  justify-content: flex-end;
  margin-left: auto;
  flex-wrap: wrap-reverse;
  /* Wrap icons if they overflow */
}

.social-link {
  /* padding-left: 1rem; */
  padding-right: 1rem;
}

.shadow-arrow-container-2 {
  display: flex;
  justify-content: flex-end;
  margin-left: 3vw;
  flex-wrap: wrap;
  /* Wrap icons if they overflow */
  flex-basis: auto;
  /* Allow container to shrink */
}

@media (max-width: 1000px) {
  .shadow-arrow-container-2 {
    display: flex;
    justify-content: flex-end;
    margin-left: 3vw;
    margin-bottom: 2.5vh;
    flex-wrap: wrap;
    /* Wrap icons if they overflow */
    flex-basis: auto;
    /* Allow container to shrink */
  }
}

.landing-lines {
  width: 600px;
  height: 100%;
  background-repeat: no-repeat;
  background-position: top;
  z-index: -10;
}

#ll1-row {
  min-height: 750px;
  max-height: 750px;
}

#ll2-row {
  min-height: 950px;
  max-height: 950px;
  padding-bottom: 12rem;
}

#ll3-row {
  margin-top: -4rem;
  min-height: 683px;
  max-height: 683px;
}

#ll5-row {
  padding: 3rem;
}

#ll7-row {
  padding-left: 4rem;
  padding-right: 4rem;
  margin-top: -10rem;
}

#ll8-row {
  /* min-height: 300px;
  max-height: 30px; */
  margin-bottom: 2rem;
  padding-left: 4rem;
  padding-right: 4rem;
}

#landing-lines-1 {
  background-image: url('../../assets/images/landingpage-v3/LandingLines1.svg');
}

#landing-lines-2 {
  background-image: url('../../assets/images/landingpage-v3/LandingLines2.svg');
}

#landing-lines-3 {
  background-image: url('../../assets/images/landingpage-v3/LandingLines3.svg');
  z-index: 100;
}

#landing-lines-4 {
  background-image: url('../../assets/images/landingpage-v3/LandingLines4.svg');
}

.bg-row {
  display: flex;
  flex-direction: row;
  position: relative;
  z-index: 0;
}

.landing-links {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  padding-left: 3rem;
  padding-top: 2rem;
}

.half-container {
  width: 50%;
}

.blue-bg {
  background-color: #1477f8;
}

#about-down-arrow {
  height: 3rem;
  transform: scale(0.75);
  margin-left: 1rem;
}

.landing-header {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  font-family: 'Space Mono 700';
  font-size: 5vw;
  text-transform: uppercase;
  height: 30vh;
  gap: 1rem;
  color: #1777f8;
  padding: 1rem;
}

.landing-header:hover {
  color: #1477f8;
}

#generate-logo {
  min-width: 60px;
  min-height: 60px;
  width: 6vw;
  height: 6vw;
}

#choose-container {
  margin: auto;
  width: 100%;
  max-width: 1800px;
  padding: 3rem;
}

#choose-grid {
  padding-top: 4rem;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr;
  width: fit-content;
  margin: auto;
}

.mascot-row {
  grid-row-start: 1;
  grid-row-end: 2;
  grid-column-start: 1;
  grid-column-end: 2;
  margin-left: auto;
  margin-right: 1rem;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

#text-arcade {
  max-width: 520px;
}

.dynamic-icon {
  grid-row-start: 2;
  grid-row-end: 3;
  grid-column-start: 1;
  grid-column-end: 2;
  margin-left: auto;
  margin-right: 1rem;
  width: 100%;
}

#arcade-svg {
  padding-left: 1rem;
  grid-row-start: 1;
  grid-row-end: 3;
  grid-column-start: 2;
  grid-column-end: 3;
  max-height: 512px;
  width: fit-content;
  margin-right: auto;
  margin-left: 1rem;
}

.landing-nav-link {
  display: flex;
  flex-direction: row;
  align-items: center;
  color: #fff;
  font-family: 'Space Mono 700';
  font-size: 3rem;
  text-transform: uppercase;
}

#about-button {
  background: none;
  padding: 0;
  cursor: pointer;
  outline: none;
  border: none;
}

.landing-nav-link:hover {
  color: transparent;
  -webkit-text-stroke: 1.5px white;
}

.big-carousel-button {
  background: none;
  padding: 0;
  cursor: pointer;
  border: none;
}

.big-carousel-button svg {
  width: 4vw;
  height: auto;
}

#what-is-generate {
  padding: 3rem;
  padding-top: 5rem;
}

#we-are {
  width: 100%;
  flex-wrap: nowrap;
  padding: 4rem;
  padding: 4rem;
}

#why-generate {
  max-width: 1800px;
  padding: 3rem;
}

#values-container {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  padding-top: 8rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 600;
}

.value {
  width: fit-content;
  white-space: nowrap;
  color: white;
  font-family: 'Space Mono 700';
  font-size: 4rem;
  line-height: 100%;
  text-transform: uppercase;
  margin-bottom: 1rem;
}

#socials {
  display: flex;
  flex-direction: row;
  gap: 1.5rem;
  margin-top: 4rem;
}

.social-icon {
  width: 3rem;
  height: 3rem;
}

.social-icon:hover {
  transform: scale(1.1);
}

.white-h2-text {
  color: white;
  font-family: 'Space Mono 700';
  font-size: 3rem;
  line-height: 100%;
  text-transform: uppercase;
  margin-bottom: 1rem;
}
/* ... */

